<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.dashboard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/admin_d_tb"
        android:background="@color/darkBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/admin_d_create_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_transaction"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/admin_d_tb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/admin_d_rv"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/admin_d_create_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/admin_d_pg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/admin_d_no_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_transactions"/>

</androidx.constraintlayout.widget.ConstraintLayout>