<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.UpdateTrans">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ct_gv1"
        app:layout_constraintGuide_percent="0.06"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ct_gv2"
        app:layout_constraintGuide_percent="0.94"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ct_gh1"
        app:layout_constraintGuide_percent="0.06"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ct_gh2"
        app:layout_constraintGuide_percent="0.94"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintTop_toBottomOf="@id/ct_gv1"
        android:layout_marginTop="10dp"
        android:id="@+id/firstname_il_u"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_et_u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintTop_toBottomOf="@id/firstname_il_u"
        android:layout_marginTop="10dp"
        android:id="@+id/lastname_il_u"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_et_u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintTop_toBottomOf="@id/lastname_il_u"
        android:layout_marginTop="10dp"
        android:id="@+id/amount_il_u"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_to_transact">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_et_u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_money"
            android:drawablePadding="8dp"
            android:inputType="number"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/type_spinner_u"
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintTop_toBottomOf="@id/amount_il_u"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/update_transaction_btn"
        android:paddingVertical="4dp"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_payment"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintTop_toBottomOf="@id/type_spinner_u"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/ct_pb_u"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintTop_toBottomOf="@id/type_spinner_u"/>

    <TextView
        android:id="@+id/go_back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/ct_gh1"
        app:layout_constraintEnd_toEndOf="@id/ct_gh2"
        app:layout_constraintBottom_toBottomOf="@id/ct_gv2"/>

</androidx.constraintlayout.widget.ConstraintLayout>